--- a/src/global/styles/_index.scss
+++ b/src/global/styles/_index.scss
@@ -7,6 +7,7 @@
 @forward './mixins/badge';
 @forward './mixins/buttons';
 @forward './mixins/card';
+@forward './mixins/dot';
 @forward './mixins/grid_layout';
 @forward './mixins/helpers';
 @forward './mixins/lists';
