--- a/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
+++ b/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
@@ -4,40 +4,13 @@
 // travel the shadow boundary are defined through this mixin
 @include sbb.host-component-properties;
 
-@mixin dot {
-  border-radius: 100%;
-  border-color: var(--sbb-color-white-default);
-  position: relative;
-  z-index: 2;
-  height: var(--sbb-pearl-chain-vertical-item-dot-size);
-  width: var(--sbb-pearl-chain-vertical-item-dot-size);
-}
-
-@mixin dot--transfer {
-  @include dot;
-
-  background-color: transparent;
-  z-index: 2;
-
-  @include sbb.if-forced-colors {
-    .pearl-chain--past & {
-      border-color: GrayText;
-    }
-  }
-}
-
 :host {
+  @include sbb.dot-variables;
+
   display: table-row;
   position: relative;
 
   --sbb-pearl-chain-vertical-right-item-width: 100%;
-  --sbb-pearl-chain-vertical-item-dot-size-ultra: var(--sbb-spacing-fixed-3x);
-  --sbb-pearl-chain-vertical-item-dot-size-large: #{sbb.px-to-rem-build(10)};
-  --sbb-pearl-chain-vertical-item-dot-size-medium: var(--sbb-spacing-fixed-2x);
-  --sbb-pearl-chain-vertical-item-dot-size-small: #{sbb.px-to-rem-build(7)};
-  --sbb-pearl-chain-vertical-item-dot-size-extra-small: #{sbb.px-to-rem-build(6)};
-  --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-small);
-  --sbb-pearl-chain-vertical-item-bullet-border-width: var(--sbb-border-width-2x);
   --sbb-pearl-chain-vertical-item-border-width: var(--sbb-border-width-2x);
   --sbb-pearl-chain-vertical-item-border-width-thin: var(--sbb-border-width-1x);
   --sbb-pearl-chain-vertical-item-spacing-small: var(--sbb-spacing-fixed-1x);
@@ -52,48 +25,48 @@
   --sbb-pearl-chain-vertical-item-transform: translateX(-50%);
 }
 
+.sbb-pearl-chain-vertical-item__dot {
+  position: relative;
+  inset-inline-start: var(--sbb-pearl-chain-vertical-item-inline-start);
+  transform: var(--sbb-pearl-chain-vertical-item-transform);
+}
+
 .sbb-pearl-chain-vertical-item-position__dot--disable-animation {
   animation: unset !important;
 }
 
-.sbb-pearl-chain-vertical-item__dot-size--small {
-  --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-small);
-
-  inset-inline-start: var(--sbb-pearl-chain-vertical-item-inline-start);
-  transform: var(--sbb-pearl-chain-vertical-item-transform);
+.sbb-pearl-chain-vertical-item__dot-size--xs {
+  @include sbb.dot--xs;
 }
 
-.sbb-pearl-chain-vertical-item__dot-size--medium {
-  --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-medium);
-
-  inset-inline-start: var(--sbb-pearl-chain-vertical-item-inline-start);
-  transform: var(--sbb-pearl-chain-vertical-item-transform);
+.sbb-pearl-chain-vertical-item__dot-size--s {
+  @include sbb.dot--s;
 }
 
-.sbb-pearl-chain-vertical-item__dot-size--large {
-  --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-large);
-
-  inset-inline-start: var(--sbb-pearl-chain-vertical-item-inline-start);
-  transform: var(--sbb-pearl-chain-vertical-item-transform);
+.sbb-pearl-chain-vertical-item__dot-size--m {
+  @include sbb.dot--m;
 }
 
-.sbb-pearl-chain-vertical-item__dot-size--ultra {
-  --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-ultra);
+.sbb-pearl-chain-vertical-item__dot-size--l {
+  @include sbb.dot--l;
 }
 
-.sbb-pearl-chain-vertical-item__dot-size--extra-small {
-  margin-inline-start: calc(
-    var(--sbb-pearl-chain-vertical-item-dot-size-extra-small) / 2 -
-      var(--sbb-pearl-chain-vertical-item-bullet-border-width)
-  );
-  inset-block-start: calc(
-    var(--sbb-pearl-chain-vertical-item-dot-size-extra-small) / 2 -
-      var(--sbb-pearl-chain-vertical-item-bullet-border-width)
-  );
+.sbb-pearl-chain-vertical-item__dot-size--xl {
+  @include sbb.dot--xl;
+}
 
-  --sbb-pearl-chain-vertical-item-dot-size: var(
-    --sbb-pearl-chain-vertical-item-dot-size-extra-small
-  );
+.sbb-pearl-chain-vertical-item__dot-size--xs.sbb-pearl-chain-vertical-item__dot--crossed-bullet,
+.sbb-pearl-chain-vertical-item__dot-size--s.sbb-pearl-chain-vertical-item__dot--crossed-bullet {
+  @include sbb.dot-crossed-bullet--s;
+}
+
+.sbb-pearl-chain-vertical-item__dot-size--m.sbb-pearl-chain-vertical-item__dot--crossed-bullet {
+  @include sbb.dot-crossed-bullet;
+}
+
+.sbb-pearl-chain-vertical-item__dot-size--l.sbb-pearl-chain-vertical-item__dot--crossed-bullet,
+.sbb-pearl-chain-vertical-item__dot-size--xl.sbb-pearl-chain-vertical-item__dot--crossed-bullet {
+  @include sbb.dot-crossed-bullet--xl;
 }
 
 .sbb-pearl-chain-vertical-item__line {
@@ -103,7 +76,7 @@
   inset-inline-start: var(--sbb-pearl-chain-vertical-item-inline-start);
   transform: var(--sbb-pearl-chain-vertical-item-transform);
   width: var(--sbb-border-width-2x);
-  inset-block-start: var(--sbb-pearl-chain-vertical-item-dot-size);
+  inset-block-start: calc(var(--dot-size) / 2);
 
   &::after {
     content: '';
@@ -117,18 +90,10 @@
 }
 
 .sbb-pearl-chain-vertical-item-position__dot {
-  @include dot;
-
-  --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-large);
+  @include sbb.dot-position;
+  @include sbb.absolute-center-x;
 
   inset-block-start: var(--sbb-pearl-chain-vertical-item-position);
-  position: absolute;
-  animation: pulse 2800ms var(--sbb-animation-easing) infinite;
-  border: var(--sbb-pearl-chain-vertical-item-border-width) currentcolor;
-  border-color: var(--sbb-pearl-chain-vertical-item-color-red);
-  background-color: var(--sbb-pearl-chain-vertical-item-color-red);
-  inset-inline-start: var(--sbb-pearl-chain-vertical-item-inline-start);
-  transform: var(--sbb-pearl-chain-vertical-item-transform);
 }
 
 .sbb-pearl-chain-vertical-item__line--dotted {
@@ -150,27 +115,19 @@
 }
 
 .sbb-pearl-chain-vertical-item__dot--standard {
-  @include dot;
-
-  border: var(--sbb-pearl-chain-vertical-item-border-width) currentcolor;
+  @include sbb.dot;
 }
 
 .sbb-pearl-chain-vertical-item__dot--thick-bullet {
-  @include dot--transfer;
-
-  border: var(--sbb-pearl-chain-vertical-item-bullet-border-width) solid currentcolor;
-  background-color: var(--sbb-pearl-chain-vertical-item-color-white) !important;
+  @include sbb.dot-transfer;
 }
 
 .sbb-pearl-chain-vertical-item__dot--thin-bullet {
-  @include dot--transfer;
+  @include sbb.dot-thin-bulett;
+}
 
-  --sbb-pearl-chain-vertical-item-bullet-border-width: var(
-    --sbb-pearl-chain-vertical-item-border-width-thin
-  );
-
-  border: var(--sbb-pearl-chain-vertical-item-bullet-border-width) solid currentcolor;
-  background-color: var(--sbb-pearl-chain-vertical-item-color-white) !important;
+.sbb-pearl-chain-vertical-item__dot--double-bullet {
+  @include sbb.dot-double-bullet;
 }
 
 .sbb-color--charcoal {
@@ -208,10 +165,7 @@
 }
 
 .sbb-pearl-chain-vertical-item__column--middle {
-  width: var(
-    --sbb-pearl-chain-vertical-middle-item-width,
-    --sbb-pearl-chain-vertical-item-dot-size
-  );
+  width: var(--sbb-pearl-chain-vertical-middle-item-width, --dot-size);
 }
 
 slot[name='left']::slotted(*) {
@@ -227,32 +181,4 @@ slot[name='right']::slotted(*) {
 .sbb-pearl-chain-vertical-item__middle {
   vertical-align: top;
   border-spacing: 0;
-}
-
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 var(--sbb-color-red);
-  }
-
-  50% {
-    box-shadow: 0 0 0 #{sbb.px-to-rem-build(4)} var(--sbb-color-red-alpha-20);
-  }
-
-  100% {
-    box-shadow: 0 0 0 0 var(--sbb-color-red);
-  }
-}
-
-@keyframes pulse-dot {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.6);
-  }
-
-  100% {
-    transform: scale(1);
-  }
 }
