--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -1,6 +1,8 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 :host {
   --sbb-toggle-width: fit-content;
@@ -43,7 +45,7 @@
 }
 
 .sbb-toggle {
-  @include text-m--regular;
+  @include sbb.text-m--regular;
 
   cursor: var(--sbb-toggle-cursor);
   position: relative;
@@ -71,8 +73,8 @@
 
     // Selected option exceeds toggle dimensions by 2x border width
     inset-block: calc(-2 * var(--sbb-border-width-1x));
-    inset-inline-end: calc(var(--sbb-toggle-option-right) - #{px-to-rem-build(2)});
-    inset-inline-start: calc(var(--sbb-toggle-option-left) - #{px-to-rem-build(2)});
+    inset-inline-end: calc(var(--sbb-toggle-option-right) - #{sbb.px-to-rem-build(2)});
+    inset-inline-start: calc(var(--sbb-toggle-option-left) - #{sbb.px-to-rem-build(2)});
     transition: {
       duration: var(--sbb-toggle-animation-duration);
       timing-function: ease;
@@ -87,8 +89,8 @@
   }
 
   &:focus-visible {
-    @include focusOutline;
+    @include sbb.focus-outline;
 
-    --sbb-focus-outline-offset: #{px-to-rem-build(5)};
+    --sbb-focus-outline-offset: #{sbb.px-to-rem-build(5)};
   }
 }
