--- a/src/components/sbb-wagon-blocked-passage/sbb-wagon-blocked-passage.scss
+++ b/src/components/sbb-wagon-blocked-passage/sbb-wagon-blocked-passage.scss
@@ -25,7 +25,7 @@
   justify-content: center;
   flex-direction: column;
   height: var(--sbb-wagon-blocked-passage-height);
-  margin-top: calc(var(--sbb-font-size-text-s) * var(--sbb-typo-line-height-body-text));
+  margin-block-start: calc(var(--sbb-font-size-text-s) * var(--sbb-typo-line-height-body-text));
 }
 
 .sbb-wagon-blocked-passage__icon {
