--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -5,18 +5,18 @@
 @include sbb.host-component-properties;
 
 :host {
-  @include sbb.dot-variables;
+  @include sbb.pearl-chain-dot-variables;
 
   display: block;
 
-  --sbb-dot-size-large: #{sbb.px-to-rem-build(10)};
-  --sbb-dot-size-small: #{sbb.px-to-rem-build(8)};
+  --sbb-pearl-chain-dot-size-large: #{sbb.px-to-rem-build(10)};
+  --sbb-pearl-chain-dot-size-small: #{sbb.px-to-rem-build(8)};
   --sbb-pearl-chain-height: var(--sbb-border-width-2x);
   --sbb-pearl-chain-spacing-small: var(--sbb-spacing-fixed-1x);
-  --sbb-color-default: var(--sbb-color-charcoal-default);
-  --sbb-color-cancellation: var(--sbb-color-red-default);
-  --sbb-color-past: var(--sbb-color-metal-default);
-  --sbb-leg-width: 100%;
+  --sbb-pearl-chain-color-default: var(--sbb-color-charcoal-default);
+  --sbb-pearl-chain-color-cancellation: var(--sbb-color-red-default);
+  --sbb-pearl-chain-color-past: var(--sbb-color-metal-default);
+  --sbb-pearl-chain-leg-width: 100%;
 }
 
 .sbb-pearl-chain {
@@ -24,19 +24,23 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
-  color: var(--sbb-color-default);
+  color: var(--sbb-pearl-chain-color-default);
   width: 100%;
-  padding-block-start: calc((var(--sbb-dot-size-large) - var(--sbb-pearl-chain-height)) / 2);
-  padding-block-end: calc((var(--sbb-dot-size-large) - var(--sbb-pearl-chain-height)) / 2);
-  padding-inline-end: var(--sbb-dot-size-large);
+  padding-block-start: calc(
+    (var(--sbb-pearl-chain-dot-size-large) - var(--sbb-pearl-chain-height)) / 2
+  );
+  padding-block-end: calc(
+    (var(--sbb-pearl-chain-dot-size-large) - var(--sbb-pearl-chain-height)) / 2
+  );
+  padding-inline-end: var(--sbb-pearl-chain-dot-size-large);
 }
 
 // first and last dot
 .sbb-pearl-chain::before,
 .sbb-pearl-chain::after {
-  @include sbb.dot;
+  @include sbb.pearl-chain-dot;
 
-  --dot-size: var(--sbb-dot-size-large);
+  --sbb-pearl-chain-dot-size: var(--sbb-pearl-chain-dot-size-large);
 
   content: '';
   position: absolute;
@@ -66,7 +70,7 @@
 
 .sbb-pearl-chain--departure-cancellation::before,
 .sbb-pearl-chain--arrival-cancellation::after {
-  color: var(--sbb-color-cancellation);
+  color: var(--sbb-pearl-chain-color-cancellation);
 
   @include sbb.if-forced-colors {
     background-color: ActiveText;
@@ -75,7 +79,7 @@
 
 .sbb-pearl-chain--departure-cancellation.pearl-chain--past::before,
 .sbb-pearl-chain--arrival-cancellation.pearl-chain--past::after {
-  color: var(--sbb-color-past);
+  color: var(--sbb-pearl-chain-color-past);
 
   @include sbb.if-forced-colors {
     color: GrayText;
@@ -97,7 +101,7 @@
   height: var(--sbb-pearl-chain-height);
   border-inline-end: var(--sbb-pearl-chain-spacing-small) solid Canvas;
   background-color: currentcolor;
-  width: var(--sbb-leg-width);
+  width: var(--sbb-pearl-chain-leg-width);
 
   @include sbb.if-forced-colors {
     color: CanvasText;
@@ -112,21 +116,23 @@
 .sbb-pearl-chain--past,
 .sbb-pearl-chain__leg--progress::before,
 .sbb-pearl-chain--progress::before {
-  --dot-color: var(--sbb-color-past);
+  --sbb-pearl-chain-dot-color: var(--sbb-pearl-chain-color-past);
 
-  color: var(--sbb-color-past);
+  color: var(--sbb-pearl-chain-color-past);
 }
 
 // dot on leg
 .sbb-pearl-chain__leg:not(:first-child) {
   &::before {
-    @include sbb.dot-transfer;
+    @include sbb.pearl-chain-dot-transfer;
 
-    --dot-size: var(--sbb-dot-size-small);
+    --sbb-pearl-chain-dot-size: var(--sbb-pearl-chain-dot-size-small);
 
     content: '';
     position: absolute;
-    inset-block-start: calc(var(--dot-size) / -2 + var(--sbb-pearl-chain-height) / 2);
+    inset-block-start: calc(
+      var(--sbb-pearl-chain-dot-size) / -2 + var(--sbb-pearl-chain-height) / 2
+    );
     inset-inline-start: 0;
     z-index: 2;
 
@@ -140,7 +146,7 @@
 
 .sbb-pearl-chain__leg--past:not(:first-child)::before,
 .sbb-pearl-chain__leg--progress::before {
-  --dot-color: var(--sbb-color-past);
+  --sbb-pearl-chain-dot-color: var(--sbb-pearl-chain-color-past);
 }
 
 // line on leg
@@ -168,16 +174,18 @@
 }
 
 .sbb-pearl-chain__leg--progress::after {
-  --dot-color: var(--sbb-color-past);
+  --sbb-pearl-chain-dot-color: var(--sbb-pearl-chain-color-past);
 
-  background-color: var(--sbb-color-past);
-  width: var(--leg-status);
+  background-color: var(--sbb-pearl-chain-color-past);
+
+  // --sbb-pearl-chain-leg-status: defined in .tsx file
+  width: var(--sbb-pearl-chain-leg-status);
 }
 
 .sbb-pearl-chain__leg--cancellation {
-  --dot-color: var(--sbb-color-cancellation);
+  --sbb-pearl-chain-dot-color: var(--sbb-pearl-chain-color-cancellation);
 
-  color: var(--sbb-color-cancellation);
+  color: var(--sbb-pearl-chain-color-cancellation);
 
   @include sbb.if-forced-colors {
     color: ActiveText;
@@ -202,16 +210,16 @@
 }
 
 .sbb-pearl-chain__position {
-  @include sbb.dot-position;
+  @include sbb.pearl-chain-dot-position;
 
-  --dot-size: var(--sbb-dot-size-large);
+  --sbb-pearl-chain-dot-size: var(--sbb-pearl-chain-dot-size-large);
 
   position: absolute;
   inset-block-start: -200%;
   z-index: 4;
 
-  // --status-position: defined in .tsx file
-  inset-inline-start: var(--sbb-status-position);
+  // --sbb-pearl-chain-status-position: defined in .tsx file
+  inset-inline-start: var(--sbb-pearl-chain-status-position);
 
   @include sbb.if-forced-colors {
     background-color: ActiveText;
