--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -5,13 +5,13 @@
 @include sbb.host-component-properties;
 
 :host {
+  --sbb-toggle-option-cursor: pointer;
   --sbb-toggle-option-color: var(--sbb-color-anthracite-default);
   --sbb-toggle-option-icon-min-size: var(--sbb-size-icon-ui-small);
   --sbb-toggle-option-line-height: calc(1em * var(--sbb-typo-line-height-body-text));
 
   display: inline-block;
   overflow: hidden;
-  flex-grow: 1;
   z-index: 1;
 }
 
@@ -24,30 +24,29 @@
 }
 
 :host([disabled]) {
+  --sbb-toggle-option-cursor: unset;
   --sbb-toggle-option-color: var(--sbb-color-graphite-default);
 }
 
 input[type='radio'] {
-  display: none;
+  @include sbb.screen-reader-only;
 }
 
 .sbb-toggle-option {
   @include sbb.text-xs--bold;
 
+  cursor: var(--sbb-toggle-option-cursor);
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: var(--sbb-spacing-fixed-1x);
   min-width: var(--sbb-toggle-min-width);
   padding-inline: var(--sbb-toggle-padding-inline);
   padding-block: var(--sbb-toggle-padding-block);
   border-radius: var(--sbb-border-radius-16x);
   color: var(--sbb-toggle-option-color);
 
-  label {
-    @include sbb.ellipsis;
-
-    cursor: inherit;
+  &:not(.sbb-toggle-option--icon-only) {
+    --sbb-icon-margin-inline: 0 var(--sbb-spacing-fixed-1x);
   }
 
   :host([icon-name]) & {
@@ -57,6 +56,10 @@ input[type='radio'] {
         ((var(--sbb-toggle-option-icon-min-size) - var(--sbb-toggle-option-line-height)) / 2)
     );
   }
+}
+
+.sbb-toggle-option__label {
+  @include sbb.ellipsis;
 }
 
 sbb-icon,
