--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -12,7 +12,7 @@
   --sbb-navigation-section-padding-inline: var(--sbb-layout-base-offset-responsive);
   --sbb-navigation-section-padding-block: var(--sbb-spacing-responsive-l);
   --sbb-navigation-section-transform: translateX(100%);
-  --sbb-navigation-section-list-padding-inline-start: var(--sbb-spacing-fixed-12x);
+  --sbb-navigation-section-content-padding-inline-start: var(--sbb-spacing-fixed-12x);
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
   position: var(--sbb-navigation-section-position);
@@ -21,8 +21,8 @@
   top: 0;
   z-index: 10;
 
-  ::slotted(sbb-navigation-list) {
-    padding-inline-start: var(--sbb-navigation-section-list-padding-inline-start);
+  ::slotted(*) {
+    padding-inline-start: var(--sbb-navigation-section-content-padding-inline-start);
   }
 
   @include sbb.mq($from: large) {
@@ -33,7 +33,7 @@
       var(--sbb-layout-base-offset-responsive);
     --sbb-navigation-section-position: absolute;
     --sbb-navigation-section-transform: translateX(0%);
-    --sbb-navigation-section-list-padding-inline-start: 0;
+    --sbb-navigation-section-content-padding-inline-start: 0;
   }
 
   @include sbb.mq($from: wide) {
