--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -13,9 +13,9 @@
   --sbb-pearl-chain-dot-size-small: var(--sbb-pearl-chain-dot-size);
   --sbb-pearl-chain-height: var(--sbb-border-width-2x);
   --sbb-pearl-chain-spacing-small: var(--sbb-spacing-fixed-1x);
-  --sbb-pearl-chain-color-default: var(--sbb-color-charcoal-default);
-  --sbb-pearl-chain-color-cancellation: var(--sbb-color-red-default);
-  --sbb-pearl-chain-color-past: var(--sbb-color-metal-default);
+  --sbb-pearl-chain-color: var(--sbb-pearl-chain-dot-color);
+  --sbb-pearl-chain-color-warning: var(--sbb-pearl-chain-dot-color-warning);
+  --sbb-pearl-chain-color-past: var(--sbb-pearl-chain-dot-color-past);
   --sbb-pearl-chain-leg-width: 100%;
 }
 
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
-  color: var(--sbb-pearl-chain-color-default);
+  color: var(--sbb-pearl-chain-color);
   width: 100%;
   padding-block-start: calc(
     (var(--sbb-pearl-chain-dot-size-medium) - var(--sbb-pearl-chain-height)) / 2
@@ -69,7 +69,7 @@
 
 .sbb-pearl-chain--departure-cancellation::before,
 .sbb-pearl-chain--arrival-cancellation::after {
-  color: var(--sbb-pearl-chain-color-cancellation);
+  color: var(--sbb-pearl-chain-color-warning);
 
   @include sbb.if-forced-colors {
     background-color: ActiveText;
@@ -183,7 +183,7 @@
 .sbb-pearl-chain__leg--cancellation {
   @include sbb.pearl-chain-dot-warning;
 
-  color: var(--sbb-pearl-chain-color-cancellation);
+  color: var(--sbb-pearl-chain-color-warning);
 
   @include sbb.if-forced-colors {
     color: ActiveText;
